--- a/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricPass.template
@@ -133,6 +133,10 @@ Pass
     int _ObjectId;
     int _PassValue;
 
+    #if defined(WRITE_DECAL_BUFFER)
+    int _DecalLayerMask;
+    #endif
+
     //-------------------------------------------------------------------------------------
     // Interpolator Packing And Struct Declarations
     //-------------------------------------------------------------------------------------
