--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassDepthOrMV.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassDepthOrMV.template
@@ -2,11 +2,12 @@
 #pragma target 4.5
 #define UNITY_MATERIAL_LIT
 #pragma multi_compile _ WRITE_NORMAL_BUFFER
+#pragma multi_compile _ WRITE_DECAL_BUFFER
 
 struct ps_input
-{		
+{
 	float4 pos : SV_POSITION;
-	float2 uv : TEXCOORD0;	
+	float2 uv : TEXCOORD0;
     #if VFX_SHADERGRAPH_HAS_UV1
     float4 uv1 : COLOR2;
     #endif
@@ -37,13 +38,13 @@ struct ps_input
 	float4 tangent : TEXCOORD5;
 	#endif
 	#endif
-	
+
 	#if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
 	float4 cPosPrevious : TEXCOORD6;
 	float4 cPosNonJiterred : TEXCOORD7;
 	#endif
     ${VFXAdditionalInterpolantsDeclaration}
-	
+
 	UNITY_VERTEX_OUTPUT_STEREO
 };
 
@@ -69,24 +70,28 @@ struct ps_input
 #if SHADERGRAPH_NEEDS_TANGENT_DEPTHONLY
 #define VFX_VARYING_TANGENT tangent
 #endif
-		
+
 ${VFXBegin:VFXVertexAdditionalProcess}
 ${VFXHDRPLitFillVaryings}
 ${VFXEnd}
-		
-${VFXInclude("Shaders/ParticleMeshes/Pass.template")}	
+
+${VFXInclude("Shaders/ParticleMeshes/Pass.template")}
 #if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
 ${VFXPassVelocityDefine}
 #else
 ${VFXPassDepthDefine}
 #endif
 ${VFXIncludeRP("VFXLit.template")}
-			
+
 ${SHADERGRAPH_PIXEL_CODE_DEPTHONLY}
-	
+
 #if VFX_PASSDEPTH == VFX_PASSDEPTH_SELECTION
 int _ObjectId;
 int _PassValue;
+#endif
+
+#if defined(WRITE_DECAL_BUFFER)
+int _DecalLayerMask;
 #endif
 
 #pragma fragment frag
@@ -112,11 +117,11 @@ void frag(ps_input i
 	UNITY_SETUP_STEREO_EYE_INDEX_POST_VERTEX(i);
 	VFXTransformPSInputs(i);
 	${VFXComputeNormalWS}
-	
+
 	#ifdef VFX_SHADERGRAPH
         ${VFXAdditionalInterpolantsPreparation}
         ${SHADERGRAPH_PIXEL_CALL_DEPTHONLY}
-	
+
         float alpha = OUTSG.${SHADERGRAPH_PARAM_ALPHA};
     #else
 	float alpha = VFXGetFragmentColor(i).a;
@@ -125,7 +130,7 @@ void frag(ps_input i
 	#endif
     #endif
 	VFXClipFragmentColor(alpha,i);
-	
+
 	#ifdef WRITE_NORMAL_BUFFER
         #ifndef VFX_SHADERGRAPH
             VFXComputePixelOutputToNormalBuffer(i,normalWS,uvData,outNormalBuffer);
@@ -135,9 +140,9 @@ void frag(ps_input i
                normalWS = mul(n,tbn);
            #endif
            SurfaceData surface = (SurfaceData)0;
-           
+
            surface.normalWS = normalWS;
-           
+
            EncodeIntoNormalBuffer(ConvertSurfaceDataToNormalData(surface), i.VFX_VARYING_POSCS.xy, outNormalBuffer);
         #endif
 	#endif
