--- a/com.unity.visualeffectgraph/Shaders/ParticleHexahedron/PassDepthOrMV.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticleHexahedron/PassDepthOrMV.template
@@ -32,11 +32,15 @@ ${VFXPassVelocityDefine}
 #else
 ${VFXPassDepthDefine}
 #endif
-${VFXInclude("Shaders/ParticleHexahedron/Pass.template")}	
+${VFXInclude("Shaders/ParticleHexahedron/Pass.template")}
 
 #if VFX_PASSDEPTH == VFX_PASSDEPTH_SELECTION
 int _ObjectId;
 int _PassValue;
+#endif
+
+#if defined(WRITE_DECAL_BUFFER)
+int _DecalLayerMask;
 #endif
 
 #pragma fragment frag
