--- a/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassDepthOrMV.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassDepthOrMV.template
@@ -6,7 +6,7 @@ struct ps_input
 	#if USE_FLIPBOOK_INTERPOLATION
 	float4 uv : TEXCOORD0;
 	#else
-	float2 uv : TEXCOORD0;	
+	float2 uv : TEXCOORD0;
 	#endif
 	#if USE_ALPHA_TEST || USE_FLIPBOOK_INTERPOLATION || VFX_USE_ALPHA_CURRENT
 	// x: alpha threshold
@@ -14,23 +14,23 @@ struct ps_input
 	// z: alpha
 	VFX_OPTIONAL_INTERPOLATION float3 builtInInterpolants : TEXCOORD1;
 	#endif
-	
+
 	#if USE_FLIPBOOK_MOTIONVECTORS
 	// x: motion vectors scale X
 	// y: motion vectors scale Y
 	VFX_OPTIONAL_INTERPOLATION float2 builtInInterpolants2 : TEXCOORD2;
 	#endif
-	
+
 	#if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
 	float4 cPosPrevious : TEXCOORD3;
 	float4 cPosNonJiterred : TEXCOORD4;
 	#endif
-    
+
     #if VFX_NEEDS_POSWS_INTERPOLATOR
     float3 posWS : TEXCOORD5;
     #endif
     ${VFXAdditionalInterpolantsDeclaration}
-	
+
 	UNITY_VERTEX_OUTPUT_STEREO
 };
 
@@ -63,6 +63,10 @@ int _ObjectId;
 int _PassValue;
 #endif
 
+#if defined(WRITE_DECAL_BUFFER)
+int _DecalLayerMask;
+#endif
+
 ${SHADERGRAPH_PIXEL_CODE_DEPTHONLY}
 
 #pragma fragment frag
@@ -72,16 +76,16 @@ float4 frag(ps_input i) : SV_TARGET
 	VFXTransformPSInputs(i);
     #ifdef VFX_SHADERGRAPH
         ${VFXAdditionalInterpolantsPreparation}
-        
+
         ${SHADERGRAPH_PIXEL_CALL_DEPTHONLY}
-        
+
         float alpha = OUTSG.${SHADERGRAPH_PARAM_ALPHA};
     #else
         float alpha = VFXGetFragmentColor(i).a;
         alpha *= VFXGetTextureColor(VFX_SAMPLER(mainTexture),i).a;
     #endif
 	VFXClipFragmentColor(alpha,i);
-	
+
 	#if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
 		${VFXComputeOutputMotionVector}
 		return encodedMotionVector;
@@ -90,7 +94,7 @@ float4 frag(ps_input i) : SV_TARGET
 	#elif VFX_PASSDEPTH == VFX_PASSDEPTH_ACTUAL
 		return (float4)0;
 	#else
-		#error VFX_PASSDEPTH undefined 
+		#error VFX_PASSDEPTH undefined
 	#endif
 }
 
