Moved _DecalLayerMask into CB UnityPerMaterial

--- a/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricPass.template
@@ -133,6 +133,8 @@ Pass
     int _ObjectId;
     int _PassValue;
 
+    uint _DecalLayerMask;
+
     //-------------------------------------------------------------------------------------
     // Interpolator Packing And Struct Declarations
     //-------------------------------------------------------------------------------------
