--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassDepthOrMV.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassDepthOrMV.template
@@ -90,6 +90,8 @@ int _ObjectId;
 int _PassValue;
 #endif
 
+uint _DecalLayerMask;
+
 #pragma fragment frag
 void frag(ps_input i
 #if USE_DOUBLE_SIDED
