--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Sphere/PassDepthOrMV.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Sphere/PassDepthOrMV.template
@@ -37,6 +37,8 @@ int _ObjectId;
 int _PassValue;
 #endif
 
+uint _DecalLayerMask;
+
 #pragma fragment frag
 void frag(ps_input i
 #ifdef WRITE_NORMAL_BUFFER
