--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/PlanarPrimitive/PassDepthOrMV.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/PlanarPrimitive/PassDepthOrMV.template
@@ -3,7 +3,7 @@
 #pragma multi_compile _ WRITE_NORMAL_BUFFER
 #pragma multi_compile _ WRITE_DECAL_BUFFER
 
-#define NEEDS_NORMAL	defined(WRITE_NORMAL_BUFFER) || FORCE_NORMAL_VARYING || SHADERGRAPH_NEEDS_NORMAL_DEPTHONLY
+#define NEEDS_NORMAL	defined(WRITE_NORMAL_BUFFER) || FORCE_NORMAL_VARYING || SHADERGRAPH_NEEDS_NORMAL_DEPTHONLY || defined(WRITE_DECAL_BUFFER)
 #define NEEDS_TANGENT	USE_NORMAL_MAP || USE_NORMAL_BENDING || SHADERGRAPH_NEEDS_TANGENT_DEPTHONLY
 
 struct ps_input
