add Universal_Android_trunk to nightly

--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -72,6 +72,8 @@ all_project_ci_nightly:
   {% endfor %}
     - path: .yamato/upm-ci-packages.yml#all_package_ci
       rerun: always
+    - path: .yamato/upm-ci-universal.yml#Universal_Android_trunk
+      rerun: always
   triggers:
     recurring:
       - branch: master
